added opendsu.com as external doc website

--- a/definitions/anchoring.yaml
+++ b/definitions/anchoring.yaml
@@ -15,7 +15,7 @@ tags:
     description: Service that facilitate the anchoring process
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
 
