--- a/definitions/dsu-wizard.yaml
+++ b/definitions/dsu-wizard.yaml
@@ -16,7 +16,7 @@ tags:
     description: Multi steps transaction manager allowing DSU manipulation
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
 
