--- a/definitions/eth-adapter.yaml
+++ b/definitions/eth-adapter.yaml
@@ -16,7 +16,7 @@ tags:
     description: Ethereum Adapter APIs
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
 
