--- a/definitions/installation.yaml
+++ b/definitions/installation.yaml
@@ -16,7 +16,7 @@ tags:
     description: Provides information about current workspace and OpenDSU-SDK installation
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
 
