--- a/definitions/static-server.yaml
+++ b/definitions/static-server.yaml
@@ -16,7 +16,7 @@ tags:
     description: Deliver static file contents from the current location
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
   /directory-summary/{walletName}/{directoryPath}:
