--- a/definitions/cloud-wallet.yaml
+++ b/definitions/cloud-wallet.yaml
@@ -8,15 +8,15 @@ info:
     url: https://opensource.org/licenses/MIT
   version: 1.0.0
 servers:
-  - url: https://csc.rms.pharmaledger.app
   - url: http://localhost:8080
+  - url: https://csc.rms.pharmaledger.app
 tags:
 
   - name: APIHub APIs - Cloud Wallet
     description: Provides operations using DSU workers by simulating Service Workers
     externalDocs:
       description: Find out more
-      url: https://privatesky.xyz
+      url: https://opendsu.com
 
 paths:
   /{appName}/loader/cloud-wallet/{keySSI}/:
