--- a/definitions/secrets.yaml
+++ b/definitions/secrets.yaml
@@ -11,7 +11,6 @@ servers:
   - url: http://localhost:8080
   - url: https://csc.rms.pharmaledger.app
 tags:
-
   - name: APIHub APIs - SSO Secrets
     description: Provides SSO Secrets management. All APIs calls should be authorized with a Bearer token.
     externalDocs:
@@ -24,7 +23,7 @@ paths:
   /secrets/getSSOSecret/{appName}:
     get:
       tags:
-        - APIHub APIs - Installation Info
+        - APIHub APIs - SSO Secrets
       summary: Access user SSO secrets for a particular appName
       parameters:
         - name: appName
@@ -48,7 +47,7 @@ paths:
           description: Wrong secret format or unathorized access
     put:
       tags:
-        - APIHub APIs - Installation Info
+        - APIHub APIs - SSO Secrets
       summary: Enable and add user SSO secret for a particular appName.
       parameters:
         - name: appName
@@ -80,7 +79,7 @@ paths:
   /deactivateSSOSecret/{appName}/{did}:
     delete:
       tags:
-        - APIHub APIs - Installation Info
+        - APIHub APIs - SSO Secrets
       summary: Deactivate user SSO secret for a particular appName.
       parameters:
         - name: appName
@@ -106,7 +105,7 @@ paths:
   /removeSSOSecret/{appName}/{did}:
     delete:
       tags:
-        - APIHub APIs - Installation Info
+        - APIHub APIs - SSO Secrets
       summary: Deactivate and remove user SSO secret for a particular appName.
       parameters:
         - name: appName
